# Centurio

./: .gitignore  BUILD.md  README.md  main.py  package.json  pyproject.toml  requirements.txt
.github/workflows/: build-windows.yml
app/: autostart.py  colors.py  diagnose.py  dialogs.py  discovery.py  format.py  hotkeys.py  iconify.py  images.py  launcher.py  log.py  main.py  queries.py  seed.py  store.py  test_centurio.py  tray.py  ui.py  view_state.py
docs/: BUILD.md  QA-Windows.md
installer/: centurio.iss
scripts/: gen-icon.js
src/main/: launcher.js  main.js  preload.js  store.js  tray.js
src/renderer/: demo-data.js  index.html  renderer.js  styles.css
tests/: test_centurio.py
